# agentic-noir-interactive-game

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  default_world_state.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  utils.py
agents/: director.py  narrator.py
core/: connection_manager.py  game_engine.py  game_state.py
data/: character_voices.json  default_world_state.json  locations.json  settings.json  solution.json  voice_options.json  world_memory.json  world_rules.json  world_state.json
scripts/: generate_intro.py  intro_story.txt
static/: index.html
utils/: __init__.py  data_handler.py  memory_manager.py  settings_manager.py
